Bug 101221 - Crash when sidebar's configuration menu is closed
Summary: Crash when sidebar's configuration menu is closed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-07-30 08:14 UTC by Heiko Tietze
Modified: 2016-08-01 09:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (12.22 KB, text/plain)
2016-07-31 08:49 UTC, Julien Nabet
Details
bt with symbols with gen rendering (10.11 KB, text/plain)
2016-07-31 08:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2016-07-30 08:14:26 UTC
The configuration manager is the menu at the top of the sidebar giving an alternative access to the tabs and providing individualization.

After opening the menu, the app crashes when I click either in the document or any entry of the list. It happens for Draw and Writer, so I guess its a general issue.

The debug after clicking "Shapes" in Draw output is 

warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
warn:legacy.tools:4189:1:svtools/source/control/valueset.cxx:1633: ValueSet::InsertItem(): ItemId == 0
soffice.bin: /mnt/hdd/Sourcen/libreoffice/include/vcl/vclreferencebase.hxx:38: void VclReferenceBase::acquire() const: Assertion `mnRefCnt>0' failed.
warn:vcl:4189:1:vcl/source/window/dialog.cxx:788: Dialog::StartExecuteModal() - Parent not visible
X Error: BadMatch (invalid parameter attributes) 8
  Major opcode: 42 (X_SetInputFocus)
  Resource id:  0x3a0159b
X Error: BadMatch (invalid parameter attributes) 8
  Major opcode: 42 (X_SetInputFocus)
  Resource id:  0x3a0159b

and when I click somewhere in the document

warn:legacy.osl:4245:1:unotools/source/config/moduleoptions.cxx:478: unknown factory                                                                                
warn:ucb.ucp.gio:4245:1:ucb/source/ucp/gio/gio_content.cxx:399: ignoring GError "Operation not supported" for <.uno:NewDoc>                                         
warn:legacy.tools:4245:1:sfx2/source/control/bindings.cxx:1981: No cache for OfficeDispatch!                                                                        
soffice.bin: /mnt/hdd/Sourcen/libreoffice/include/vcl/vclreferencebase.hxx:38: void VclReferenceBase::acquire() const: Assertion `mnRefCnt>0' failed.               
warn:vcl:4245:1:vcl/source/window/dialog.cxx:788: Dialog::StartExecuteModal() - Parent not visible
X Error: BadMatch (invalid parameter attributes) 8
  Major opcode: 42 (X_SetInputFocus)
  Resource id:  0x3801150
X Error: BadMatch (invalid parameter attributes) 8
  Major opcode: 42 (X_SetInputFocus)
  Resource id:  0x3801150

I compile with these options:
--enable-dbgutil
--without-java
--without-help
--without-myspell-dicts
--without-doxygen
--without-system-postgresql
--disable-gtk3
--disable-postgresql-sdbc
--enable-kde4
--disable-firebird-sdbc
--disable-dbus
--disable-cups

v5.2 works well.

Version: 5.3.0.0.alpha0+
Build ID: bfa9135d0f62500c554d111dafd044e9f29574a9
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Julien Nabet 2016-07-31 08:49:00 UTC
Created attachment 126492 [details]
bt with symbols

On pc Debian x86-64 with master sources updated yesterday and SAL_USE_VCLPLUGIN=kde4, I could reproduce this.
Comment 2 Julien Nabet 2016-07-31 08:59:21 UTC
Created attachment 126493 [details]
bt with symbols with gen rendering
Comment 3 Commit Notification 2016-07-31 20:34:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e02e103e3e90d1c6fa32605fdfdc4ac8cd27e6b8

Resolves: tdf#101221 VclPtr: funkiness with PopupMenu dtor before dispose

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Heiko Tietze 2016-08-01 09:26:29 UTC
(In reply to Commit Notification from comment #3)
> Caolán McNamara committed a patch related to this issue.
>
> Affected users are encouraged to test the fix and report feedback.

/confirmed
Thanks, Caolán
Comment 5 Julien Nabet 2016-08-01 09:30:27 UTC
Following Heiko's comment, let's put this one to VERIFIED.