Resolves: tdf#101221 VclPtr: funkiness with PopupMenu dtor before dispose

Change-Id: I6f8d980cc14b7f8c7b7ed5ee66a54dfce9d6e09a